# unnnamed-nn

./: .clang-format  .gitignore  CMakeLists.txt  flake.nix
src/: Layer.cpp  Layer.hpp  main.cpp
